# rs-base-api

./: .env-sample  .gitignore  Cargo.toml  Readme.md  build.sh
.github/workflows/: rust_ci.yml
src/: main.rs  test.rs
src/clients/: lrclib.rs  mod.rs
src/configuration/: secrets.rs
src/controllers/: authentication.rs  error.rs  mod.rs  songs.rs  users.rs
src/drivers/: mod.rs  postgre.rs
src/middlewares/: authentication.rs  authorization.rs
src/models/: users.rs
src/services/: emails.rs  mod.rs  ntp.rs
src/utils/: utils.rs
src/websocket/: handlers.rs  mod.rs
