[package]
name = "rs-base-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "~0.13.5"
actix-cors = "~0.7.1"
actix-http = "~3.12.0"
actix-identity = "~0.9.0"
actix-service = "~2.0"
actix-web = "~4.13.0"
actix-web-actors = "~4.3.0"
aws-config = "~1.8.15"
aws-sdk-sesv2 = "~1.116.0"
anyhow = "~1.0.102"
async-stream = "~0.3.6"
async-trait = "~0.1.89"
bson = {version = "~3.1.0", features = ["serde"]}
chrono = "~0.4.44"
env_logger = "~0.11.9"
envfile = "~0.2.1"
envoption = "~0.2.1"
futures = "~0.3.32"
json = "~0.12.4"
jsonwebtoken = { version = "~10.3.0", features = ["rust_crypto"] }
log = "~0.4.29"
mongodb = "~3.5.1"
num_enum = "~0.7.6"
pretty_env_logger = "~0.5.0"
rc = "~0.1.1"
rsntp = "~4.1.1"
rust-argon2 = "~3.0.0"
serde = { version = "~1.0.228", features = ["derive"] }
sqlx = { version = "~0.8.6", features = [ "runtime-tokio", "tls-native-tls", "postgres" ] }
stoppable_thread = "~0.2.1"
thiserror = "~2.0.18"
tokio = { version = "~1.50.0", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
time = "~0.3.47"

[dev-dependencies]
env_logger = "~0.11.9"
test-log = "~0.2.19"
